--- a/personalsite/site-plan.html
+++ b/personalsite/site-plan.html
@@ -38,6 +38,7 @@
         <p>
             The Contact Us form will include the following JavaScript-powered features:
         <ul>
+            <li><strong>Interactive FAQ Section:</strong> Users can click on a question to reveal the answer. This creates a clean and user-friendly experience by hiding answers until they are needed.</li>
             <li><strong>Real-Time Validation:</strong> Instant feedback for invalid email formats or empty fields.</li>
             <li><strong>Asynchronous Submission:</strong> Form data sent without page reload using AJAX.</li>
             <li><strong>Dynamic Messages:</strong> Success/error notifications displayed after submission.</li>
