--- a/thebrokegamers/aboutus.html
+++ b/thebrokegamers/aboutus.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <title>The Broke Gamers | About Us</title>
     <meta name="author" content="Kimball Bushi">
+    <link rel="stylesheet" href="styles/indexstyles.css">
     <link rel="stylesheet" href="styles/aboutusstyle.css">
     <link rel="icon" href="images/Fevicon/Fevicon-32.png" type="image/png" sizes="16x16">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-
 </head>
 
 <body>
@@ -44,25 +44,19 @@
                     technology. Growing up, we often found ourselves gaming on low-end 'potato PCs' due to financial
                     constraints. These experiences inspired us to create a company dedicated to providing affordable
                     gaming solutions to others facing similar challenges. Our journey from modest beginnings to
-                    launching
-                    this venture has fueled our commitment to making gaming accessible to all.</p>
+                    launching this venture has fueled our commitment to making gaming accessible to all.</p>
 
                 <h3>Our Mission and Vision</h3>
                 <p>Our mission is to offer cost-effective gaming solutions by providing high-quality refurbished
-                    components and
-                    custom-built gaming PCs. We aim to build trust within the gaming community through exceptional
-                    value,
-                    rigorous quality assurance, and outstanding customer service. Our vision is to be the go-to
-                    destination for
-                    budget-conscious gamers seeking reliable and affordable gaming options.</p>
+                    components and custom-built gaming PCs. We aim to build trust within the gaming community through exceptional
+                    value, rigorous quality assurance, and outstanding customer service. Our vision is to be the go-to
+                    destination for budget-conscious gamers seeking reliable and affordable gaming options.</p>
 
                 <h3>Meet the Team</h3>
                 <p>Get to know the passionate team behind The Broke Gamers. Each of us brings unique skills and
-                    expertise to the
-                    table, united by our shared goal of democratizing gaming accessibility. Our dedication to delivering
+                    expertise to the table, united by our shared goal of democratizing gaming accessibility. Our dedication to delivering
                     exceptional value and our personal experiences as budget-conscious gamers drive us to continuously
-                    improve
-                    and innovate.</p>
+                    improve and innovate.</p>
             </div>
 
             <div class="about-image">
@@ -80,10 +74,8 @@
             <div class="shop-text">
                 <h3>Custom Gaming PCs</h3>
                 <p>Browse our selection of custom-built gaming PCs, designed to cater to various budgets and gaming
-                    needs. Each
-                    PC is assembled with care, focusing on aesthetics and performance. Choose from our pre-configured
-                    options or
-                    customize your own gaming rig to suit your preferences.</p>
+                    needs. Each PC is assembled with care, focusing on aesthetics and performance. Choose from our pre-configured
+                    options or customize your own gaming rig to suit your preferences.</p>
 
                 <h3>Refurbished Components</h3>
                 <p>Discover our wide range of refurbished computer parts, including:</p>
@@ -98,8 +90,7 @@
 
                 <h3>Secure Shopping Experience</h3>
                 <p>Our e-commerce platform is designed for a secure and seamless shopping experience. We offer secure
-                    payment
-                    gateways and reliable shipping logistics to ensure your purchases reach you safely and promptly. Our
+                    payment gateways and reliable shipping logistics to ensure your purchases reach you safely and promptly. Our
                     customer support team is always available to assist you with any questions or concerns.</p>
             </div>
         </section>
@@ -126,6 +117,7 @@
         </div>
     </footer>
 
+    <script src="js/cart.js"></script>
 </body>
 
 </html>
