--- a/thebrokegamers/cart.html
+++ b/thebrokegamers/cart.html
@@ -5,6 +5,8 @@
     <title>The Broke Gamers | Checkout</title>
     <link rel="stylesheet" href="styles/indexstyles.css">
     <link rel="stylesheet" href="styles/cart.css">
+    <link rel="icon" href="images/Fevicon/Fevicon-32.png" type="image/png" sizes="16x16">
+
 </head>
 <body>
     <header>
