--- a/thebrokegamers/index.html
+++ b/thebrokegamers/index.html
@@ -126,17 +126,10 @@
         <section class="products-section">
             <h2>Our Products and Services</h2>
             <h3>Custom Gaming PCs</h3>
-            <p>We specialize in building custom gaming PCs using carefully selected, high-quality used parts. Our range
-                of gaming PC configurations is designed to meet the needs of gamers with different budgets and
-                performance requirements. Whether you’re a casual gamer or a hardcore enthusiast, we have the perfect
-                gaming rig for you. Plus, we offer customization options so you can tailor your PC to your specific
-                preferences.</p>
+            <p>We specialize in building custom gaming PCs using carefully selected, high-quality used parts. Our range of gaming PC configurations is designed to meet the needs of gamers with different budgets and performance requirements. Whether you’re a casual gamer or a hardcore enthusiast, we have the perfect gaming rig for you. Plus, we offer customization options so you can tailor your PC to your specific preferences.</p>
 
             <h3>Used Computer Parts Marketplace</h3>
-            <p>Explore our extensive marketplace of refurbished computer parts, including CPUs, GPUs, RAM, motherboards,
-                and peripherals. Each component is sourced, tested, and refurbished to ensure optimal performance and
-                reliability. Our user-friendly e-commerce platform makes it easy to browse, purchase, and receive your
-                components securely and efficiently.</p>
+            <p>Explore our extensive marketplace of refurbished computer parts, including CPUs, GPUs, RAM, motherboards, and peripherals. Each component is sourced, tested, and refurbished to ensure optimal performance and reliability. Our user-friendly e-commerce platform makes it easy to browse, purchase, and receive your components securely and efficiently.</p>
         </section>
     </main>
 
@@ -160,6 +153,8 @@
             <p class="copyright">&copy; 2024 The Broke Gamers. All rights reserved.</p>
         </div>
     </footer>
+
+    <script src="js/cart.js"></script>
 </body>
 
 </html>
