--- a/thebrokegamers/store.html
+++ b/thebrokegamers/store.html
@@ -5,6 +5,7 @@
     <title>The Broke Gamers | Store</title>
     <link rel="stylesheet" href="styles/indexstyles.css">
     <link rel="stylesheet" href="styles/store.css">
+    <link rel="icon" href="images/Fevicon/Fevicon-32.png" type="image/png" sizes="16x16">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
