--- a/thebrokegamers/contactus.html
+++ b/thebrokegamers/contactus.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>The Broke Gamers | Contact Us</title>
+    <link type="text/css" rel="stylesheet" href="styles/indexstyles.css">
     <link type="text/css" rel="stylesheet" href="styles/contactusstyle.css">
 </head>
 
@@ -17,7 +18,7 @@
                     <a href="index.html">Home</a>
                     <a href="store.html">Store</a>
                     <a href="aboutus.html">About Us</a>
-                    <a href="contactus.html">Contact Us</a>
+                    <a href="contactus.html" class="active">Contact Us</a>
                     <a href="site-plan.html">Site Plan</a>
                 </div>
             </nav>
