--- a/thebrokegamers/index.html
+++ b/thebrokegamers/index.html
@@ -17,7 +17,7 @@
                 <img src="images/logo-png.png" alt="Company Logo" class="logo"></a>
             <nav>
                 <div class="nav-links">
-                    <a href="index.html">Home</a>
+                    <a href="index.html" class="active">Home</a>
                     <a href="store.html">Store</a>
                     <a href="aboutus.html">About Us</a>
                     <a href="contactus.html">Contact Us</a>
