--- a/thebrokegamers/aboutus.html
+++ b/thebrokegamers/aboutus.html
@@ -20,7 +20,7 @@
                 <div class="nav-links">
                     <a href="index.html">Home</a>
                     <a href="store.html">Store</a>
-                    <a href="aboutus.html">About Us</a>
+                    <a href="aboutus.html" class="active">About Us</a>
                     <a href="contactus.html">Contact Us</a>
                     <a href="site-plan.html">Site Plan</a>
                 </div>
