--- a/thebrokegamers/contactus.html
+++ b/thebrokegamers/contactus.html
@@ -6,6 +6,7 @@
     <title>The Broke Gamers | Contact Us</title>
     <link type="text/css" rel="stylesheet" href="styles/indexstyles.css">
     <link type="text/css" rel="stylesheet" href="styles/contactusstyle.css">
+    <link rel="icon" href="images/Fevicon/Fevicon-32.png" type="image/png" sizes="16x16">
 </head>
 
 <body>
