site plan completed

--- a/personalsite/site-plan.html
+++ b/personalsite/site-plan.html
@@ -36,14 +36,18 @@
 
         <h3>Dynamic Elements</h3>
         <p>
-            The Contact Us form will include the following JavaScript-powered features:
-        <ul>
-            <li><strong>Interactive FAQ Section:</strong> Users can click on a question to reveal the answer. This creates a clean and user-friendly experience by hiding answers until they are needed.</li>
-            <li><strong>Real-Time Validation:</strong> Instant feedback for invalid email formats or empty fields.</li>
-            <li><strong>Asynchronous Submission:</strong> Form data sent without page reload using AJAX.</li>
-            <li><strong>Dynamic Messages:</strong> Success/error notifications displayed after submission.</li>
-            <li><strong>Character Counter:</strong> Live counter for the message field.</li>
-        </ul>
+            The Cart and Store pages will include the following JavaScript-powered features:
+            <ul>
+                <li><strong>Dynamic Cart Display:</strong> Cart items are dynamically generated and updated when items are added or removed, providing a seamless shopping experience.</li>
+                <li><strong>Real-Time Price Calculation:</strong> The total price of the cart updates automatically as items are added or removed, ensuring accurate pricing at all times.</li>
+                <li><strong>Local Storage Integration:</strong> Cart data is saved in the browser's local storage, allowing users to retain their cart across page reloads or browser sessions.</li>
+                <li><strong>Remove Item Functionality:</strong> Users can remove items from the cart with a single click, and the cart updates instantly.</li>
+                <li><strong>Dynamic Parts List:</strong> Gaming parts are dynamically generated and displayed on the store page, ensuring an up-to-date and interactive product listing.</li>
+                <li><strong>Quantity Selector:</strong> Users can increase or decrease the quantity of a part before adding it to the cart, providing flexibility in their purchase.</li>
+                <li><strong>Add to Cart Functionality:</strong> Parts are added to the cart with the selected quantity, and the cart count updates in real-time.</li>
+                <li><strong>Real-Time Notifications:</strong> A temporary notification appears when an item is successfully added to the cart, confirming the action to the user.</li>
+                <li><strong>Cart Count Updates:</strong> The cart count in the header updates instantly when items are added, providing a clear indicator of the cart's current state.</li>
+            </ul>
         </p>
         <!-- change this -->
 
@@ -134,13 +138,7 @@
 
         <h2>Home Page</h2>
 
-        <p>Welcome to The Broke Gamers, your ultimate destination for affordable gaming solutions! Founded by a group of
-            five childhood friends with a shared passion for gaming and technology, we understand the challenges of
-            gaming on
-            a tight budget. Our mission is to make gaming accessible to everyone by providing high-quality, custom-built
-            gaming PCs and a wide range of refurbished computer parts at a fraction of the cost of new components. Join
-            us on
-            our journey to democratize gaming and bring exceptional value to budget-conscious gamers everywhere.</p>
+        <p>Welcome to The Broke Gamers, Elevate your game without emptying your wallet — We bring high-performance gaming within reach.</p>
 
         <p><strong>Why Choose The Broke Gamers?</strong></p>
         <p>At The Broke Gamers, we believe that everyone should have the opportunity to experience the joy of gaming,
@@ -243,41 +241,13 @@
         </ul>
         <h3>[Page 3]</h3>
         <p>
-        <h2>FAQs</h2>
+        <h2>Store</h2>
 
-        <p><strong>Why buy refurbished components?</strong></p>
-        <p>Refurbished components offer a cost-effective alternative to new parts without compromising on quality or
-            performance. By choosing refurbished, you also contribute to reducing electronic waste and supporting
-            environmental sustainability.</p>
+        <p><strong>Refurbished Gaming Components</strong></p>
+        <p>List of parts being sold.</p>
 
-        <p><strong>How do you ensure the quality of your products?</strong></p>
-        <p>We implement rigorous quality control measures during the refurbishment process. Each component is thoroughly
-            tested for performance and reliability before being made available for sale.</p>
-
-        <p><strong>Can I customize my gaming PC?</strong></p>
-        <p>Yes! We offer customization options for our gaming PCs, allowing you to tailor your rig to your specific
-            gaming
-            needs and preferences.</p>
-
-        <p><strong>What is your warranty policy?</strong></p>
-        <p>We provide warranties for our refurbished parts to ensure customer satisfaction. Our warranty policies are
-            carefully managed to balance customer satisfaction with financial sustainability.</p>
-
-        <p><strong>How can I contact customer support?</strong></p>
-        <p>Our customer support team is available to assist you with any inquiries or issues. You can reach us via
-            email,
-            phone, or through our website's contact form.</p>
-
-        <h2>Conclusion</h2>
-
-        <p>At The Broke Gamers, we are passionate about making gaming accessible to everyone. With our affordable,
-            high-quality products and exceptional customer service, we are committed to providing the best value to
-            budget-conscious gamers. Join us in our mission to democratize gaming and experience the joy of gaming
-            without
-            breaking the bank.</p>
-        </p>
         <p>Images for the Page 3</p>
-        <img src="images/high-angle-gaming-setup-with-computer.jpg" alt="image for page3">
+        <img src="" alt="image for page3">
         <img src="images/Faqsaskhere.jpg" alt="image for page3">
 
 
